--- a/src/main/resources/static_config/static_action_groups.yml
+++ b/src/main/resources/static_config/static_action_groups.yml
@@ -9,7 +9,7 @@ SGS_KIBANA_ALL_WRITE:
   allowed_actions:
   - "kibana:saved_objects/*/write"
   type: "kibana"
-  description: "Statically defined"
+  description: "Allow writing in all kibana apps"
 SGS_KIBANA_ALL_READ:
   reserved: true
   hidden: false
@@ -17,7 +17,7 @@ SGS_KIBANA_ALL_READ:
   allowed_actions:
   - "kibana:saved_objects/*/read"
   type: "kibana"
-  description: "Statically defined"
+  description: "Allow reading in all kibana apps"
 SGS_CLUSTER_ALL:
   reserved: true
   hidden: false
@@ -25,7 +25,7 @@ SGS_CLUSTER_ALL:
   allowed_actions:
   - "cluster:*"
   type: "cluster"
-  description: "Statically defined"
+  description: "Allow everything on cluster level"
 SGS_CRUD:
   reserved: true
   hidden: false
@@ -34,7 +34,7 @@ SGS_CRUD:
   - "SGS_READ"
   - "SGS_WRITE"
   type: "index"
-  description: "Statically defined"
+  description: "Allow all read/write operations on data"
 SGS_SEARCH:
   reserved: true
   hidden: false
@@ -44,7 +44,7 @@ SGS_SEARCH:
   - "indices:data/read/msearch*"
   - "SGS_SUGGEST"
   type: "index"
-  description: "Statically defined"
+  description: "Allow searching"
 SGS_DATA_ACCESS:
   reserved: true
   hidden: false
@@ -53,7 +53,7 @@ SGS_DATA_ACCESS:
   - "indices:data/*"
   - "SGS_CRUD"
   type: "index"
-  description: "Statically defined"
+  description: "Allow all read/write operations on data"
 SGS_CREATE_INDEX:
   reserved: true
   hidden: false
@@ -62,7 +62,7 @@ SGS_CREATE_INDEX:
   - "indices:admin/create"
   - "indices:admin/mapping/put"
   type: "index"
-  description: "Statically defined"
+  description: "Allow creating new indices"
 SGS_WRITE:
   reserved: true
   hidden: false
@@ -71,7 +71,7 @@ SGS_WRITE:
   - "indices:data/write*"
   - "indices:admin/mapping/put"
   type: "index"
-  description: "Statically defined"
+  description: "Allow writing data"
 SGS_MANAGE_ALIASES:
   reserved: true
   hidden: false
@@ -79,7 +79,7 @@ SGS_MANAGE_ALIASES:
   allowed_actions:
   - "indices:admin/aliases*"
   type: "index"
-  description: "Statically defined"
+  description: "Allow managing index aliases"
 SGS_READ:
   reserved: true
   hidden: false
@@ -88,7 +88,7 @@ SGS_READ:
   - "indices:data/read*"
   - "indices:admin/mappings/fields/get*"
   type: "index"
-  description: "Statically defined"
+  description: "Allow all read operations"
 SGS_INDICES_ALL:
   reserved: true
   hidden: false
@@ -96,7 +96,7 @@ SGS_INDICES_ALL:
   allowed_actions:
   - "indices:*"
   type: "index"
-  description: "Statically defined"
+  description: "Allow readonly everything with indices and data"
 SGS_DELETE:
   reserved: true
   hidden: false
@@ -104,7 +104,7 @@ SGS_DELETE:
   allowed_actions:
   - "indices:data/write/delete*"
   type: "index"
-  description: "Statically defined"
+  description: "Allow deleting documents"
 SGS_CLUSTER_COMPOSITE_OPS:
   reserved: true
   hidden: false
@@ -115,7 +115,7 @@ SGS_CLUSTER_COMPOSITE_OPS:
   - "indices:data/write/reindex"
   - "SGS_CLUSTER_COMPOSITE_OPS_RO"
   type: "cluster"
-  description: "Statically defined"
+  description: "Allow read/write bulk and m* operations"
 SGS_CLUSTER_COMPOSITE_OPS_RO:
   reserved: true
   hidden: false
@@ -128,7 +128,7 @@ SGS_CLUSTER_COMPOSITE_OPS_RO:
   - "indices:admin/aliases/get*"
   - "indices:data/read/scroll"
   type: "cluster"
-  description: "Statically defined"
+  description: "Allow readonly bulk and m* operations"
 SGS_GET:
   reserved: true
   hidden: false
@@ -137,7 +137,7 @@ SGS_GET:
   - "indices:data/read/get*"
   - "indices:data/read/mget*"
   type: "index"
-  description: "Statically defined"
+  description: "Allow get"
 SGS_MANAGE:
   reserved: true
   hidden: false
@@ -146,7 +146,7 @@ SGS_MANAGE:
   - "indices:monitor/*"
   - "indices:admin/*"
   type: "index"
-  description: "Statically defined"
+  description: "Allow indices management"
 SGS_CLUSTER_MONITOR:
   reserved: true
   hidden: false
@@ -154,7 +154,7 @@ SGS_CLUSTER_MONITOR:
   allowed_actions:
   - "cluster:monitor/*"
   type: "cluster"
-  description: "Statically defined"
+  description: "Allow monitoring the cluster"
 SGS_MANAGE_SNAPSHOTS:
   reserved: true
   hidden: false
@@ -162,8 +162,8 @@ SGS_MANAGE_SNAPSHOTS:
   allowed_actions:
   - "cluster:admin/snapshot/*"
   - "cluster:admin/repository/*"
-  type: "index"
-  description: "Statically defined"
+  type: "cluster"
+  description: "Allow snapshots"
 SGS_INDEX:
   reserved: true
   hidden: false
@@ -174,15 +174,15 @@ SGS_INDEX:
   - "indices:admin/mapping/put"
   - "indices:data/write/bulk*"
   type: "index"
-  description: "Statically defined"
+  description: "Allow indexing"
 SGS_UNLIMITED:
   reserved: true
   hidden: false
   static: true
   allowed_actions:
   - "*"
-  type: "index"
-  description: "Statically defined"
+  type: "all"
+  description: "Allow all"
 SGS_INDICES_MONITOR:
   reserved: true
   hidden: false
@@ -190,7 +190,7 @@ SGS_INDICES_MONITOR:
   allowed_actions:
   - "indices:monitor/*"
   type: "index"
-  description: "Statically defined"
+  description: "Allow monitoring indices"
 SGS_SUGGEST:
   reserved: true
   hidden: false
@@ -198,4 +198,4 @@ SGS_SUGGEST:
   allowed_actions:
   - "indices:data/read/suggest*"
   type: "index"
-  description: "Statically defined"
+  description: "Allow suggestions"
