--- a/sgconfig/sg_roles_mapping.yml
+++ b/sgconfig/sg_roles_mapping.yml
@@ -1,46 +1,50 @@
 ---
+# In this file users, backendroles and hosts can be mapped to Search Guard roles.
+# Permissions for Search Guard roles are configured in sg_roles.yml
+
 _sg_meta:
   type: "rolesmapping"
   config_version: 2
+
+# Define your roles mapping here
+# See https://docs.search-guard.com/latest/mapping-users-roles
+
+## Demo roles mapping
+
 SGS_ALL_ACCESS:
   reserved: true
-  hidden: false
   backend_roles:
   - "admin"
-  description: "Migrated from v6"
+  description: "Maps admin to SGS_ALL_ACCESS"
+
 SGS_OWN_INDEX:
   reserved: false
-  hidden: false
   users:
   - "*"
-  description: "Migrated from v6"
+  description: "Allow full access to an index named like the username"
+
 SGS_LOGSTASH:
   reserved: false
-  hidden: false
   backend_roles:
   - "logstash"
-  description: "Migrated from v6"
+
 SGS_KIBANA_USER:
   reserved: false
-  hidden: false
   backend_roles:
   - "kibanauser"
-  description: "Migrated from v6"
+  description: "Maps kibanauser to SGS_KIBANA_USER"
+
 SGS_READALL:
   reserved: true
-  hidden: false
   backend_roles:
   - "readall"
-  description: "Migrated from v6"
+
 SGS_MANAGE_SNAPSHOTS:
   reserved: true
-  hidden: false
   backend_roles:
   - "snapshotrestore"
-  description: "Migrated from v6"
+
 SGS_KIBANA_SERVER:
   reserved: true
-  hidden: false
   users:
   - "kibanaserver"
-  description: "Migrated from v6"
