--- a/sgconfig/sg_tenants.yml
+++ b/sgconfig/sg_tenants.yml
@@ -2,7 +2,14 @@
 _sg_meta:
   type: "tenants"
   config_version: 2
+
+# Define your tenants here
+# See https://docs.search-guard.com/latest/kibana-multi-tenancy
+
+# Kibana multitenancy is NOT FREE FOR COMMERCIAL use, you need to obtain an enterprise license
+# https://docs.search-guard.com/latest/kibana-multi-tenancy
+
+## Demo tenants
 admin_tenant:
   reserved: false
-  hidden: false
-  description: "Migrated from v6"
+  description: "Demo tenant for admin user"
