--- a/src/test/resources/legacy/sgconfig_v6/sg_config.yml
+++ b/src/test/resources/legacy/sgconfig_v6/sg_config.yml
@@ -73,8 +73,8 @@ searchguard:
         internalProxies: '192\.168\.0\.10|192\.168\.0\.11' # regex pattern
         #internalProxies: '.*' # trust all internal proxies, regex pattern
         remoteIpHeader:  'x-forwarded-for'
-        #proxiesHeader:   'x-forwarded-by'
-        #trustedProxies: '.*' # trust all external proxies, regex pattern
+        proxiesHeader:   'x-forwarded-by'
+        trustedProxies: '.*' # trust all external proxies, regex pattern
         ###### see https://docs.oracle.com/javase/7/docs/api/java/util/regex/Pattern.html for regex help
         ###### more information about XFF https://en.wikipedia.org/wiki/X-Forwarded-For
         ###### and here https://tools.ietf.org/html/rfc7239
