Change logstash demo role to include cluster pipeline put+get permissions so that logstash and beats can manage their pipelines

--- a/sgconfig/sg_roles.yml
+++ b/sgconfig/sg_roles.yml
@@ -154,6 +154,8 @@ sg_logstash:
     - CLUSTER_COMPOSITE_OPS
     - indices:admin/template/get
     - indices:admin/template/put
+    - cluster:admin/ingest/pipeline/put
+    - cluster:admin/ingest/pipeline/get
   indices:
     'logstash-*':
       '*':
