Change built-in SGS_LOGSTASH role to include cluster pipeline put+get permissions so that logstash and beats can manage their pipelines (ITT-2105)

--- a/src/main/resources/static_config/static_roles.yml
+++ b/src/main/resources/static_config/static_roles.yml
@@ -193,6 +193,8 @@ SGS_LOGSTASH:
   - "SGS_CLUSTER_COMPOSITE_OPS"
   - "indices:admin/template/get"
   - "indices:admin/template/put"
+  - "cluster:admin/ingest/pipeline/put"
+  - "cluster:admin/ingest/pipeline/get"
   index_permissions:
   - index_patterns:
     - "logstash-*"
