--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
   <artifactId>search-guard-7</artifactId>
   <packaging>jar</packaging>
   <!-- 7.x.y-a.b.c-->
-  <version>7.0-HEAD-SNAPSHOT</version>
+  <version>7.0.1-35.0.0-SNAPSHOT</version>
   <name>Search Guard</name>
-  <description>Provide access control related features for Elasticsearch 6</description>
+  <description>Provide access control related features for Elasticsearch 7</description>
   <url>https://github.com/floragunncom/search-guard</url>
   <inceptionYear>2015</inceptionYear>
 
@@ -34,7 +34,7 @@
   </licenses>
 
   <properties>
-    <enterprise-modules.version>7.0-enterprise-HEAD-SNAPSHOT</enterprise-modules.version>
+    <enterprise-modules.version>7.0.1-35.0.0-SNAPSHOT</enterprise-modules.version>
     <elasticsearch.version>7.0.1</elasticsearch.version>
     
     <!-- deps -->
