--- a/src/main/resources/static_config/static_roles.yml
+++ b/src/main/resources/static_config/static_roles.yml
@@ -191,21 +191,18 @@ SGS_LOGSTASH:
   cluster_permissions:
   - "SGS_CLUSTER_MONITOR"
   - "SGS_CLUSTER_COMPOSITE_OPS"
-  - "indices:admin/template/get"
-  - "indices:admin/template/put"
+  - "SGS_CLUSTER_MANAGE_INDEX_TEMPLATES"
+  - "SGS_CLUSTER_MANAGE_ILM"
   - "cluster:admin/ingest/pipeline/put"
   - "cluster:admin/ingest/pipeline/get"
   index_permissions:
   - index_patterns:
     - "logstash-*"
-    allowed_actions:
-    - "SGS_CRUD"
-    - "SGS_CREATE_INDEX"
-  - index_patterns:
     - "*beat*"
     allowed_actions:
     - "SGS_CRUD"
     - "SGS_CREATE_INDEX"
+    - "SGS_MANAGE"
   
 SGS_READALL_AND_MONITOR:
   reserved: true
