--- a/src/test/resources/sg_internal_users_spock_add_roles.yml
+++ b/src/test/resources/sg_internal_users_spock_add_roles.yml
@@ -3,12 +3,13 @@ _sg_meta:
   type: "internalusers"
   config_version: 2
 bug.99:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 CN=spock,OU=client,O=client,L=Test,C=DE:
   hash: "_impersonation_only_"
   reserved: false
@@ -18,8 +19,9 @@ CN=spock,OU=client,O=client,L=Test,C=DE:
   - "starfleet"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 spock:
-  hash: "$2a$12$GI9JXffO3WUjTsU7Yy3E4.LBxC2ILo66Zg/rr79BpikSL2IIRezQa"
+  hash: "AZeX9OHiYlCAV4e11VPZlHknbeeAiyWoMKZgMGa+7Xo=#i0eus4oAuOFIeK2KxZmCKADygv3cDtUinxtqT6zru8M="
   reserved: false
   hidden: false
   backend_roles:
@@ -28,8 +30,9 @@ spock:
   - "additionalrole2"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 kirk:
-  hash: "$2a$12$xZOcnwYPYQ3zIadnlQIJ0eNhX1ngwMkTN.oMwkKxoGvDVPn4/6XtO"
+  hash: "ENE3Jk9yaSlCOjmDG6tR7zh13Jm9dXpsI9aCOdZJk3I=#neLQHIOL8RCG8oHDgKKtXyYOPcXaLQkUI7FEZoUFFf0="
   reserved: false
   hidden: false
   backend_roles:
@@ -37,22 +40,25 @@ kirk:
   - "starfleet"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 §ÄÖÜäöüß:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 '"''+-,;_?*@<>!$%&/()=#':
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 sarek:
-  hash: "$2a$12$Ioo1uXmH.Nq/lS5dUVBEsePSmZ5pSIpVO/xKHaquU/Jvq97I7nAgG"
+  hash: "zoo+YfN7XEMmfsXos7oDS56ASFU3UX4WSoOWW/dVGCE=#8TAbEKQdNUoaU2N1Ur96VXQ/Z8VvtTVjv+loH709PPY="
   reserved: false
   hidden: false
   backend_roles:
@@ -61,16 +67,18 @@ sarek:
   - "ambassador"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 crusherw:
-  hash: "$2a$12$61vXe3cXy32p0cjsW0Y/SeZa7kEVSWuQK0jg98D9d5zOGXfo5NgyC"
+  hash: "fB4QfIn4Pc+cxSwtVXjcsArSXQfVVftYeqv3712Zl6s=#S05gf5tbjHQDI8zYBmplsvg+tNM83JSTY2VH6hdbDB8="
   reserved: false
   hidden: false
   backend_roles:
   - "starfleet_academy"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 worf:
-  hash: "$2a$12$A41IxPXV1/Dx46C6i1ufGubv.p3qYX7xVcY46q33sylYbIqQVwTMu"
+  hash: "6DToF1caABMyfA0H8L5++5czoBIm3c7FKi1H3XelD2I=#yiRG3d9GgHsywX9pIiAOaCMm+GVRPvjNuhq8ofnNrYo="
   reserved: false
   hidden: false
   backend_roles:
@@ -78,8 +86,9 @@ worf:
   - "starfleet"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 picard:
-  hash: "$2a$12$wkY2BsRneCU5za1OPYlzsehQit6gu2vprVv/4jHiSEEBv2ThunaTS"
+  hash: "lKymP66s16Tq8XBxLzbTpp4Rb0t85kd+FpwVZ8sVDrY=#ij9hGjuUD2b6zL6/LXEwho/dTxbyx7Ijd/3pOwQc20w="
   reserved: false
   hidden: false
   backend_roles:
@@ -87,17 +96,20 @@ picard:
   - "starfleet"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 bug108:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 nagilum:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
