--- a/sgconfig/sg_internal_users.yml
+++ b/sgconfig/sg_internal_users.yml
@@ -1,57 +1,45 @@
----
 # This is the internal user database
-# The hash value is a bcrypt hash and can be generated with plugin/tools/hash.sh
+# The hash value is a pbkdf2 based hash and can be generated with plugin/tools/hash.sh
 
-_sg_meta:
-  type: "internalusers"
-  config_version: 2
-  
-# Define your internal users here
-# See https://docs.search-guard.com/latest/internal-users-database
-
-## Demo users
-
+#password is: admin
 admin:
-  hash: "$2a$12$VcCDgh2NDk07JGN0rjGbM.Ad41qVR/YFJcgHp0UGns5JDymv..TOG"
-  reserved: true
-  backend_roles:
-  - "admin"
-  description: "Demo admin user"
-
-kibanaserver:
-  hash: "$2a$12$4AcgAt3xwOWadA5s5blL6ev39OXDNhmOesEoo33eZtrq2N0YrU3H."
-  reserved: true
-  description: "Demo kibanaserver user"
-
-kibanaro:
-  hash: "$2a$12$JJSXNfTowz7Uu5ttXfeYpeYE0arACvcwlPBStB1F.MI7f0U9Z4DGC"
-  reserved: false
-  backend_roles:
-  - "kibanauser"
-  - "readall"
+  readonly: true
+  hash: "ePZd6nWd8ZVrIVauOaj4cte4WS49hMycPPG3Xsum790=#DJeVs/lj6XvRHPCjUTpQC8qqP4jFQreP4wrfDOa4Oaw="
+  roles:
+    - admin
   attributes:
-    attribute1: "value1"
-    attribute2: "value2"
-    attribute3: "value3"
-  description: "Demo kibanaro user"
+    #no dots allowed in attribute names
+    attribute1: value1
+    attribute2: value2
+    attribute3: value3
 
+#password is: logstash
 logstash:
-  hash: "$2a$12$u1ShR4l4uBS3Uv59Pa2y5.1uQuZBrZtmNfqB3iM/.jL0XoV9sghS2"
-  reserved: false
-  backend_roles:
-  - "logstash"
-  description: "Demo logstash user"
+  hash: "iNZ75AixiBVkZhgr9/VGRNf7Ggces3oIZLTS8ggmcX0=#8I0/l23iu3DL/ymHGlj2Rv6kYDewxHq1zaEbUfQf9sY="
+  roles:
+    - logstash
 
+#password is: kibanaserver  
+kibanaserver:
+  readonly: true
+  hash: "aTyRAqOEn5+4YU4xsOo0L33MV9NSk9RIHq+ENIAvWjw=#rmEIrYyfGw2RIQ2j1wXF7NN86eTHHvgG+tPJOz/2p3M="
+
+#password is: kibanaro
+kibanaro:  
+  hash: "KTBoFTHiTHLoi6M0BmA5rDkRaRbkE2Z8K/VlV65Zsnw=#q64pQzMLt/c1+ffHfJ0uTH7QJ7K6KWcMuul1PcNo4iE="
+  roles:
+    - kibanauser
+    - readall
+
+#password is: readall
 readall:
-  hash: "$2a$12$ae4ycwzwvLtZxwZ82RmiEunBbIPiAmGZduBAjKN0TXdwQFtCwARz2"
-  reserved: false
-  backend_roles:
-  - "readall"
-  description: "Demo readall user"
+  hash: "wtrGb54bA1e4VQJ+hxEM5lWBYZOqITagH0zrR6nYwcE=#td6iJOneF9yhNAedm2ulwnQkvjGAtmJ0FIIAdlqHYpc="
+  #password is: readall
+  roles:
+    - readall
 
+#password is: snapshotrestore
 snapshotrestore:
-  hash: "$2y$12$DpwmetHKwgYnorbgdvORCenv4NAK8cPUg8AI6pxLCuWf/ALc0.v7W"
-  reserved: false
-  backend_roles:
-  - "snapshotrestore"
-  description: "Demo snapshotrestore user"
+  hash: "/zKJKhQ5ZsRkZZqo4qVnWLsbcPIagpQvCgte/nbRCuY=#0QLZ6V/yA2yqt8XJ5Y8sYUdoofTKpPUuXzRdeiB6HHg="
+  roles:
+    - snapshotrestore
