--- a/src/test/resources/sg_internal_users_transport_username.yml
+++ b/src/test/resources/sg_internal_users_transport_username.yml
@@ -3,102 +3,115 @@ _sg_meta:
   type: "internalusers"
   config_version: 2
 bug.99:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 user_c:
-  hash: "$2a$04$jQcEXpODnTFoGDuA7DPdSevA84CuH/7MOYkb80M3XZIrH76YMWS9G"
+  hash: "g2+rgMrGQlzCGuseAQ6yDD7iZYU6D09Pr+CSxdq3D9Y=#350+5L3Or2RgS+eS5LVr4KA43oYPr8e9vQDjtowiqF8="
   reserved: false
   hidden: false
   backend_roles:
   - "sg_uc"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 user_b:
-  hash: "$2a$04$idGSEpNOhFbyiRL6toGPT.orh7ENOEU8kAqwkRFaXWRdA6wVgyqUu"
+  hash: "B7AO06fDghNlLGg1grwnMaD9Wu376R/AQ833Rcnr1vw=#28k+CY38+nJOdt1ZyammoPAbAWxm4TT1KP/5Vfa3TcY="
   reserved: false
   hidden: false
   backend_roles:
   - "sg_ub"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 snapresuser:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 user_a:
-  hash: "$2a$04$NDy7mGbRNrmPMh9nSnIB.OTMFkcioEd69A04ReSGkJDd7QHxnCcVC"
+  hash: "nCqDlRX8T6xdD/hcYmlYbcF9sW8+H9UpHFXAwNHHWOw=#WmYhuVFX8tz6s8xze8B79QyNepc+DXtTncBzmcYiAIc="
   reserved: false
   hidden: false
   backend_roles:
   - "sg_ua"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 sarek:
-  hash: "$2a$12$Ioo1uXmH.Nq/lS5dUVBEsePSmZ5pSIpVO/xKHaquU/Jvq97I7nAgG"
+  hash: "BFH0uSzED0uuZ2Q3KE5eswhtuDfkerAbKs94S8I680A=#AtdbhfrYALS0Hb0f869/xc0BR4oeikb2hH8cVAomTEY="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 crusherw:
-  hash: "$2a$12$61vXe3cXy32p0cjsW0Y/SeZa7kEVSWuQK0jg98D9d5zOGXfo5NgyC"
+  hash: "Jf8ZPPjYXaes449n+3Qy8hCcR9P9QEv/DRF++148Vec=#FAeiooURhN1n3kL9FheJ02wrx/xUP2lPLv6V+IZC3hc="
   reserved: false
   hidden: false
   backend_roles:
   - "starfleet_academy"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 kibanaserver:
-  hash: "$2a$12$4AcgAt3xwOWadA5s5blL6ev39OXDNhmOesEoo33eZtrq2N0YrU3H."
+  hash: "aTyRAqOEn5+4YU4xsOo0L33MV9NSk9RIHq+ENIAvWjw=#rmEIrYyfGw2RIQ2j1wXF7NN86eTHHvgG+tPJOz/2p3M="
   reserved: true
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 theindexadmin:
-  hash: "$2a$12$P.QbiwOsnxgz7kLBT10F7u6GhY7//Keyz7Xwf7lNzskRxpo9.zxFS"
+  hash: "sxb716UAgIN12U4rOaG4HHCiFjjqqqtPMKW4QcAz5wg=#h0iJA6MSXxMzoOksMyb0ylO1hfrJC3z6DDVptBNIuA4="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 aliastest:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 logstash:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 twitter:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 mindex12:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 spock:
-  hash: "$2a$12$GI9JXffO3WUjTsU7Yy3E4.LBxC2ILo66Zg/rr79BpikSL2IIRezQa"
+  hash: "AZeX9OHiYlCAV4e11VPZlHknbeeAiyWoMKZgMGa+7Xo=#i0eus4oAuOFIeK2KxZmCKADygv3cDtUinxtqT6zru8M="
   reserved: false
   hidden: false
   backend_roles:
@@ -106,6 +119,7 @@ spock:
   - "starfleet"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 knuddel:
   hash: "_imponly_"
   reserved: false
@@ -113,14 +127,16 @@ knuddel:
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 557:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles:
   - "sg_557"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 client:
   hash: "_impersonation_only_"
   reserved: false
@@ -130,15 +146,17 @@ client:
   - "starfleet"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 baz:
-  hash: "$2a$12$A41IxPXV1/Dx46C6i1ufGubv.p3qYX7xVcY46q33sylYbIqQVwTMu"
+  hash: "kE0LGVN7YooQHAnhn8T4YmRRk51y1RxlHNCkBQhNgEM=#eHOBG6Vvu5k5amP2x7At47e1Br2pd4dgk0e1evWOtG8="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 picard:
-  hash: "$2a$12$wkY2BsRneCU5za1OPYlzsehQit6gu2vprVv/4jHiSEEBv2ThunaTS"
+  hash: "e5S9zGZycugHiWdfkHI4LLnCnB1XfdohHUI87ChzNho=#t0zw4XSoMG1olbyxUveVZI0Zg43Yr64sbhCej+ZRLMs="
   reserved: false
   hidden: false
   backend_roles:
@@ -146,22 +164,25 @@ picard:
   - "starfleet"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 bug108:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 nagilum:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 custattr:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
@@ -173,15 +194,17 @@ custattr:
     c5: null
     null: "abc"
   description: "Migrated from v6"
+  static: false
 restoreuser:
-  hash: "$2a$12$JU2QjYVTlI24Q/enEOpf2uTLCPGchN.eXWCsrBiieUcRoeh53NB0y"
+  hash: "Nn+eInzwvxnjwZUhxbPuKMCGsoNlv+DFFZ4P/zfgXrE=#F4tJXgv6+iGzEJve8rVD9cd8K56nXhLKmYjWUTfh1ZE="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 abc:
-  hash: "$2a$12$bP0CO5d5nhmaTOj7mGteHugXQQ8jlSV0dxcl5//moZ1xnI.pVPXfe"
+  hash: "92MM4XsvCmMRQymHQAjCOaxYqL7EaAGg50NdpNj7N48=#pvqcTuM7fO90LSk6hf+gcydWQpIh0SfMwX+owTbvYaw="
   reserved: false
   hidden: false
   backend_roles:
@@ -189,8 +212,9 @@ abc:
   - "starfleet"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 kirk:
-  hash: "$2a$12$xZOcnwYPYQ3zIadnlQIJ0eNhX1ngwMkTN.oMwkKxoGvDVPn4/6XtO"
+  hash: "vlFni0RMWh+tmggyP3Xdop/htHD7LcgrQINPpe5pFKM=#FMfyv540Wd0+u498pSl5HFDl4IWHo6fvBsN9OufvetA="
   reserved: false
   hidden: false
   backend_roles:
@@ -198,22 +222,25 @@ kirk:
   - "starfleet"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 §ÄÖÜäöüß:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 ccsresolv:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 itt1635:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles:
@@ -222,15 +249,17 @@ itt1635:
   - "sg_esb_5"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 rexclude:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 user_role01_role02_role03:
-  hash: "$2a$12$6.4Y6L//xeKQ7t8YEG0s6OH4F4q9gMw0J8E0GjmUMNZeyIWu1IRWS"
+  hash: "lJQq3D7r2yAcf1FZtqoxoJ4DxqHuTY8AlvfqmW+8UJc=#NnFCVgDOIUvnDMQSMsIjLxR70wz7hgzUJxeUmd29Pss="
   reserved: false
   hidden: false
   backend_roles:
@@ -239,35 +268,40 @@ user_role01_role02_role03:
   - "role03"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 underscore:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 dlsnoinvest:
-  hash: "$2a$12$9Zr4IgoJRqK6xJq4xjoa6OZAnY4QOQ6xIhcCxeYoQtB/HriMkeJSC"
+  hash: "YqJb0ihQRSVw+yQayJXtYduQqtEK3HEo3rqPqV63bBw=#nRs570WTYzgEjb9m8LDesQD8AypLVV8ntuh5a/nA2nE="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 aliasmngt:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles:
   - "sg_aliasmngt"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 '"''+-,;_?*@<>!$%&/()=#':
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 userwithnopasswd:
   hash: null
   reserved: false
@@ -277,8 +311,9 @@ userwithnopasswd:
   - "starfleet"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 worf:
-  hash: "$2a$12$A41IxPXV1/Dx46C6i1ufGubv.p3qYX7xVcY46q33sylYbIqQVwTMu"
+  hash: "cs/uUh+8xRtqvZxKyaMoY6axGw7SziJs4r5yJx3RDdM=#lKofLkM5qNKyOyZnIwt/5I6BYtdRVrFgMzdfHHy7vTw="
   reserved: false
   hidden: false
   backend_roles:
@@ -286,29 +321,33 @@ worf:
   - "starfleet"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 writer:
-  hash: "$2a$12$LZvbDVnegkTbEFTu9hHnWO4HIrdB9rGaKcEOID5n0VV4j58cnvyZ."
+  hash: "FF7E9zxsqApGTFCOpEVRD+L0I/JEiwAq9Gb2XN2Nd84=#1SQpHLuX6wXLzyr5sXTETR6AAvOoD6CVNDoUuHjzd/k="
   reserved: false
   hidden: false
   backend_roles: []
   attributes: {}
   description: "Migrated from v6"
+  static: false
 user_role01:
-  hash: "$2a$12$XrBfLQh2T8wIzpxE5vzhUOPjjGfONcD8UEjd5IT5KveG8ULZaj04."
+  hash: "Exh2b9Qyd5oipN0gjBnhEv+LUcLYPLJTVzxpgREIhr8=#0YkPf8CotBU93/NWkjJgD0FK/oVCuVPk4a5dRCPUqXU="
   reserved: false
   hidden: false
   backend_roles:
   - "role01"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 bulk:
-  hash: "$2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m"
+  hash: "v/Q/8ehM2NjcmlLLI5tAOg4ZPni803LBKya8rBVfnTk=#91drNERtMfLtOcBYzTfKr8sMlOciRcmqttPOpo2Ybuw="
   reserved: false
   hidden: false
   backend_roles:
   - "sg_bulk"
   attributes: {}
   description: "Migrated from v6"
+  static: false
 userwithblankpasswd:
   hash: ""
   reserved: false
@@ -318,3 +357,4 @@ userwithblankpasswd:
   - "starfleet"
   attributes: {}
   description: "Migrated from v6"
+  static: false
