--- a/plugin-descriptor.properties
+++ b/plugin-descriptor.properties
@@ -3,7 +3,7 @@
 description=Provide access control related features for Elasticsearch 7
 #
 # 'version': plugin's version
-version=7.x-HEAD-SNAPSHOT
+version=7.1-HEAD-SNAPSHOT
 #
 # 'name': the plugin name
 name=search-guard-7
@@ -22,4 +22,4 @@ java.version=1.8
 # elasticsearch release. This version is checked when the plugin
 # is loaded so Elasticsearch will refuse to start in the presence of
 # plugins with the incorrect elasticsearch.version.
-elasticsearch.version=7.0.1
+elasticsearch.version=7.1.0
