--- a/plugin-descriptor.properties
+++ b/plugin-descriptor.properties
@@ -3,7 +3,7 @@
 description=Provide access control related features for Elasticsearch 6
 #
 # 'version': plugin's version
-version=6.8-HEAD-SNAPSHOT
+version=6.8.0.-25.1
 
 # 'name': the plugin name
 name=search-guard-6
