--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <artifactId>search-guard-6</artifactId>
   <packaging>jar</packaging>
   <!-- 6.x.y-a.b-->
-  <version>6.8-HEAD-SNAPSHOT</version>
+  <version>6.8.0-25.1-SNAPSHOT</version>
   <name>Search Guard</name>
   <description>Provide access control related features for Elasticsearch 6</description>
   <url>https://github.com/floragunncom/search-guard</url>
@@ -34,7 +34,7 @@
   </licenses>
 
   <properties>
-    <sgssl.version>6.8-HEAD-SNAPSHOT</sgssl.version>
+    <sgssl.version>6.8.0-25.6-SNAPSHOT</sgssl.version>
     <enterprise-modules.version>6.8-enterprise-HEAD-SNAPSHOT</enterprise-modules.version>
     <elasticsearch.version>6.8.0</elasticsearch.version>
     
