--- a/plugin-descriptor.properties
+++ b/plugin-descriptor.properties
@@ -3,7 +3,7 @@
 description=Provide access control related features for Elasticsearch 7
 #
 # 'version': plugin's version
-version=7.1-HEAD-SNAPSHOT
+version=7.1.0-35.0.0
 #
 # 'name': the plugin name
 name=search-guard-7
