--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
   </licenses>
 
   <properties>
-    <sgssl.version>6.8.0-25.6-SNAPSHOT</sgssl.version>
+    <sgssl.version>6.8.0-25.6</sgssl.version>
     <enterprise-modules.version>6.8.0-34.1-SNAPSHOT</enterprise-modules.version>
     <elasticsearch.version>6.8.0</elasticsearch.version>
     
