--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,11 +55,96 @@ jobs:
             - ~/.m2
           key: maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
 
-#workflows:
-#  version: 2
-#  commit:
-#    jobs:
-#      - build
+  fipsbuild:
+    parallelism: 4
+    working_directory: ~/circleci-sg
+    resource_class: xlarge
+    docker:
+      - image: floragunncom/fjvm:8u212-stretch
+    steps:
+      - run:
+          name: Versions
+          command: 'uname -a;java -version'
+      - checkout
+      - restore_cache:
+          keys:
+            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
+            - maven-repo-v3-{{ .Branch }}-
+            - maven-repo-v3-
+      - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:resolve -DincludeParents=true -s settings.xml
+      - run: ./smoketest.sh
+      - run:
+          command: |
+            set -x
+            cd src/test/java         
+            TESTFILES="$(circleci tests glob **/*.java | circleci tests split --split-by=timings | tr -s '\n' ',')"
+            echo "$TESTFILES"
+            #echo "${TESTFILES// /,}"
+            cd ~/circleci-sg
+
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              mvn -U -Pcoverage,with-static-openssl-linux-non-fedora,-with-dynamic-openssl verify -Dtest="$TESTFILES" -s settings.xml
+            else
+              #no coverage for non-master branches
+              mvn -U verify -Dtest="$TESTFILES" -s settings.xml -Pwith-static-openssl-linux-non-fedora,-with-dynamic-openssl
+            fi
+      - store_test_results:
+          path: target/surefire-reports
+      - store_artifacts:
+          path: /.circleci-task-data
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
+
+  fipsbuild_oldvm:
+    parallelism: 4
+    working_directory: ~/circleci-sg
+    resource_class: xlarge
+    docker:
+      - image: floragunncom/fjvm:8u111-jdk
+    steps:
+      - run:
+          name: Versions
+          command: 'uname -a;java -version'
+      - checkout
+      - restore_cache:
+          keys:
+            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
+            - maven-repo-v3-{{ .Branch }}-
+            - maven-repo-v3-
+      - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:resolve -DincludeParents=true -s settings.xml
+      - run: ./smoketest.sh
+      - run:
+          command: |
+            set -x
+            cd src/test/java         
+            TESTFILES="$(circleci tests glob **/*.java | circleci tests split --split-by=timings | tr -s '\n' ',')"
+            echo "$TESTFILES"
+            #echo "${TESTFILES// /,}"
+            cd ~/circleci-sg
+
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              mvn -U -Pcoverage,with-static-openssl-linux-non-fedora,-with-dynamic-openssl verify -Dtest="$TESTFILES" -s settings.xml
+            else
+              #no coverage for non-master branches
+              mvn -U verify -Dtest="$TESTFILES" -s settings.xml -Pwith-static-openssl-linux-non-fedora,-with-dynamic-openssl
+            fi
+      - store_test_results:
+          path: target/surefire-reports
+      - store_artifacts:
+          path: /.circleci-task-data
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
+workflows:
+  version: 2
+  commit:
+    jobs:
+      - build
+      - fipsbuild
+      - fipsbuild_oldvm
 #  nightly:
 #    triggers:
 #      - schedule:
