--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
     working_directory: ~/circleci-sg
     resource_class: xlarge
     docker:
-      - image: floragunncom/fjvm:8u212-stretch
+      - image: openjdk:8u212-stretch
     steps:
       - run:
           name: Versions
@@ -71,11 +71,46 @@ jobs:
             - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
             - maven-repo-v3-{{ .Branch }}-
             - maven-repo-v3-
-      - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:resolve -DincludeParents=true -s settings.xml
-      - run: ./smoketest.sh
+      - run:
+          command: |
+              #RUN wget https://downloads.bouncycastle.org/fips-java/bc-fips-1.0.1.jar -P /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/ext
+              #RUN cp -a /etc/java-8-openjdk/security/java.security /etc/java-8-openjdk/security/java.security.orig
+              #COPY java.security.fips /etc/java-8-openjdk/security/java.security
+
+              #RUN cp -a /etc/ssl/certs/java/cacerts /etc/ssl/certs/java/cacerts.orig
+              #RUN rm /etc/ssl/certs/java/cacerts
+              #RUN keytool -importkeystore -srckeystore /etc/ssl/certs/java/cacerts.orig -srcstoretype JKS -destkeystore /etc/ssl/certs/java/cacerts -deststoretype BCFKS -deststorepass changeit -srcstorepass changeit
+
+              wget http://us.mirrors.quenda.co/apache/maven/maven-3/3.6.1/binaries/apache-maven-3.6.1-bin.tar.gz -nv
+              tar -xzf apache-maven-3.6.1-bin.tar.gz
+
+              export M2 /apache-maven-3.6.1/bin
+              export M2_HOME /apache-maven-3.6.1
+              export MAVEN_HOME /apache-maven-3.6.1
+              export PATH $M2:$PATH
+              mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:resolve -DincludeParents=true -s settings.xml
+      - run:
+          command: |
+              wget https://downloads.bouncycastle.org/fips-java/bc-fips-1.0.1.jar -P /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/ext
+              cp -a /etc/java-8-openjdk/security/java.security /etc/java-8-openjdk/security/java.security.orig
+              cp java.security.fips /etc/java-8-openjdk/security/java.security
+
+              cp -a /etc/ssl/certs/java/cacerts /etc/ssl/certs/java/cacerts.orig
+              rm /etc/ssl/certs/java/cacerts
+              keytool -importkeystore -srckeystore /etc/ssl/certs/java/cacerts.orig -srcstoretype JKS -destkeystore /etc/ssl/certs/java/cacerts -deststoretype BCFKS -deststorepass changeit -srcstorepass changeit
+
+              export M2 /apache-maven-3.6.1/bin
+              export M2_HOME /apache-maven-3.6.1
+              export MAVEN_HOME /apache-maven-3.6.1
+              export PATH $M2:$PATH
+              ./smoketest.sh
       - run:
           command: |
             set -x
+            export M2 /apache-maven-3.6.1/bin
+            export M2_HOME /apache-maven-3.6.1
+            export MAVEN_HOME /apache-maven-3.6.1
+            export PATH $M2:$PATH
             cd src/test/java         
             TESTFILES="$(circleci tests glob **/*.java | circleci tests split --split-by=timings | tr -s '\n' ',')"
             echo "$TESTFILES"
