--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,6 +94,9 @@ jobs:
       - run:
           command: |
               wget https://downloads.bouncycastle.org/fips-java/bc-fips-1.0.1.jar -P /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/ext
+              ls -la /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/ext || true
+              ls -la /etc || true
+              find / -iname java.security || true
               cp -a /etc/java-8-openjdk/security/java.security /etc/java-8-openjdk/security/java.security.orig
               cp java.security.fips /etc/java-8-openjdk/security/java.security
 
